--- a/15_autoloading/composer.json
+++ b/15_autoloading/composer.json
@@ -7,8 +7,7 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^7.4",
-        "phpfastcache/phpfastcache": "^8.1"
+        "guzzlehttp/guzzle": "^7.0"
     },
     "autoload": {
         "psr-4": {
